fix: alignment of "observe sky" label

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -266,7 +266,6 @@ ul.effects-list {
 }
 
 .btn-observe-sky {
-  display: inline-flex;
   align-items: center;
   gap: bsize(1);
 
